Fix inline descender space, use vertical-align: bottom for tiled attachments

--- a/src/content/css/content.less
+++ b/src/content/css/content.less
@@ -122,7 +122,7 @@
     }
 
     .content-attachment {
-        display: inline-block;
+        display: block;
         max-width: 100%;
     }
     
@@ -138,6 +138,7 @@
         margin: 0 auto;
         max-width:100%;
         box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.15);
+        display: block;
     }
 
     .content-attachments-2 > *,
@@ -146,10 +147,17 @@
     .content-attachments-4 > * {
         width: 50%;
         display: inline-block;
+        vertical-align: bottom;
+    }
+
+    .content-attachments-3 > *:nth-child(n+1) .content-attachment img,
+    .content-attachments-4 > *:nth-child(n+2) .content-attachment img {
+        border-radius: 0;
     }
 
     .content-attachments-3 > *:nth-child(1) {
         height: 50%;
+        max-height: 150px;
         overflow: hidden;
         display: block;
     }
